src/objects/CS_Staging_User__c.object
<CustomObject>
    <description>CS Staging User</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the user have an active CSOD account?</description>
        <inlineHelpText>Does the user have an active CSOD account?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line__c</fullName>
        <label>Address Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analyst_Enroll_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analyst Enroll User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Last_Modified_Date__c</fullName>
        <label>CS Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Rec_ID__c</fullName>
        <externalId>true</externalId>
        <label>CS Rec ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company as assigned in CSOD</description>
        <inlineHelpText>Company as assigned in CSOD</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compass_ID__c</fullName>
        <description>Compass ID</description>
        <inlineHelpText>Compass ID</inlineHelpText>
        <label>Compass ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Language__c</fullName>
        <description>What language does this user speak?</description>
        <inlineHelpText>What language does this user speak?</inlineHelpText>
        <label>Display Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Parent__c</fullName>
        <description>Internal or External</description>
        <inlineHelpText>Internal or External</inlineHelpText>
        <label>Division Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Captures the full name of the user in LMS system</description>
        <inlineHelpText>Captures the full name of the user in LMS system</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_Assignment_Date__c</fullName>
        <description>Date PEP was assigned by admin</description>
        <inlineHelpText>Date PEP was assigned by admin</inlineHelpText>
        <label>PEP Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEP_Enrolled__c</fullName>
        <description>PEP User? Y/N</description>
        <inlineHelpText>PEP User? Y/N</inlineHelpText>
        <label>PEP Enrolled</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_Extension_Days__c</fullName>
        <description># days PEP extension</description>
        <inlineHelpText># days PEP extension</inlineHelpText>
        <label>PEP Extension (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEP_Transferred_from_another_user__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PEP Transferred from another user</description>
        <inlineHelpText>PEP Transferred from another user</inlineHelpText>
        <label>PEP Transferred from another user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PEP_assigned_by__c</fullName>
        <description>Admin who assigned PEP originally</description>
        <inlineHelpText>Admin who assigned PEP originally</inlineHelpText>
        <label>PEP assigned by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_end_date__c</fullName>
        <description>PEP end date</description>
        <inlineHelpText>PEP end date</inlineHelpText>
        <label>PEP end date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEP_start_Date__c</fullName>
        <description>PEP start Date</description>
        <inlineHelpText>PEP start Date</inlineHelpText>
        <label>PEP start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pass_Type__c</fullName>
        <label>Pass Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone Number</description>
        <inlineHelpText>Phone Number</inlineHelpText>
        <label>Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>Quote #</description>
        <inlineHelpText>Quote #</inlineHelpText>
        <label>Quote #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scopus_ID__c</fullName>
        <externalId>true</externalId>
        <label>Scopus ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <description>User First Name</description>
        <inlineHelpText>User First Name</inlineHelpText>
        <label>User First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Login__c</fullName>
        <description>User Last Login</description>
        <inlineHelpText>User Last Login</inlineHelpText>
        <label>User Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Last_Name__c</fullName>
        <description>User Last Name</description>
        <inlineHelpText>User Last Name</inlineHelpText>
        <label>User Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <description>Active/Inactive</description>
        <inlineHelpText>Active/Inactive</inlineHelpText>
        <label>User Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasError</label>
        <type>Checkbox</type>
    </fields>
    <label>CS Staging User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSU-{00000000}</displayFormat>
        <label>CS Staging User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Staging Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>